# wacom-utility

./: .gitignore  PYTHON3_MIGRATION.md  README.md  README_UPGRADE.md  RELEASE_CHECKLIST_0.1.1.md  UPGRADE_CHECKLIST.md  UPGRADE_REPORT.md  cairo_framework.py  dialogbox.py  pyproject.toml  tablet_capplet.py  wacom_data.py  wacom_identify.py  wacom_interface.py  wacom_utility.glade  wacom_utility.py  wacom_utility_gtk4.ui  wacom_xorg.py  wayland_pad_daemon.py
packaging/rpm/: README.md  wacom-utility.desktop  wacom-utility.spec  wacom-wayland-pad-daemon.service
scripts/: render-systemd-service.py
src/wacom_utility/: __init__.py  cairo_framework.py  resources.py  wacom_data.py  wacom_identify.py  wacom_interface.py  wacom_utility.py  wacom_utility_gtk4.ui  wayland_pad_daemon.py
src/wacom_utility/images/pad/: PTZ-630.xml
systemd/: wacom-wayland-pad-daemon.service.in  ydotoold.service.in
systemd/user/: wacom-wayland-pad-daemon.service  ydotoold.service
